--- a/09_1.yaml
+++ b/09_1.yaml
@@ -9,4 +9,5 @@ my:
       cream:
         - sugar
         - milk
+        - murr
       composition: { dough: [eggs, sugar, flour], cream: [sugar, milk]}
