Translate 09_1.yaml via GitLocalize

--- a/es/09_1.yaml
+++ b/es/09_1.yaml
@@ -4,16 +4,16 @@ my:
     composition:
       dough:
       - eggs
-      - 
+      - azúcar
       - flour
       cream:
-      - 
-      - 
+      - azúcar
+      - Leche
     dough:
-    - 
+    - huevos
     - sugar
-    - 
+    - harina
     cream:
     - sugar
-    - 
+    - Leche
     - murr
